<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="preco">Preço</string>
    <string name="preco_do_litro">Preço do litro</string>
    <string name="autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">seu gasto total será de:</string>
    <string name="calcular">Calcular</string>
    <string name="valor_total_rs">R$ 0</string>
</resources>