<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/textDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/distancia"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/total_de_quilometros"
        android:textColor="#857D7D"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/textPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/preco_do_litro"
        android:textColor="#857D7D"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/textAutonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomia"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="64dp"
        android:text="@string/kms_por_litro"
        android:textColor="#857D7D"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/gasto_total"
        android:textAllCaps="true"
        android:textColor="#857D7D"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewRS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/valor_total_rs"
        android:textAllCaps="true"
        android:textColor="@color/darkBlue"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:padding="20dp"
        android:text="@string/calcular"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:onClick="teste" />
</LinearLayout>
